# phishguard-ai

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  action.yml  email_auth.py  features.py  model.py  phishguard.py  psl.py  pyproject.toml  redirect.py  render.yaml  reporting.py  server.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: adoption.yml  config.yml  documentation.yml
.github/workflows/: codeql.yml  pages.yml  phishguard-self-scan.yml  release.yml  tests.yml
data/: benchmark_urls.jsonl  public_benchmark_urls.jsonl  urls.txt
docs/: ADOPTION.md  BENCHMARK.md  DETECTION_MODEL.md  DEVELOPMENT.md  EMAIL_OUTPUT_EXAMPLES.md  FIRST_CONTRIBUTION.md  GITHUB_CODE_SCANNING.md  PROJECT_EVIDENCE.md  PUBLIC_EVIDENCE.md  PYPI_PUBLISHING.md  PYTHON_API.md  QUICK_DEMO.md  RELEASING.md  USE_CASES.md  WINDOWS_INSTALL.md
tests/: test_action_result.py  test_benchmark.py  test_cli.py  test_email_auth.py  test_email_features.py  test_eml.py  test_features.py  test_js_parity.py  test_model.py  test_plain_mode.py  test_psl.py  test_public_api_docs.py  test_redirect.py  test_reporting.py  test_repository_policy.py  test_server.py  test_typosquatting.py
tools/: action_result.py  build_public_benchmark_slice.py  evaluate_url_benchmark.py  repository_policy.py  update_public_suffix_list.py
web/: app.js  index.html  scoring.js  style.css
